<resources>

    <string name="app_name">DTU Hostel Mess</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>

    <string name="mess_menu">Mess Menu</string>
    <string name="buy">Buy</string>
    <string name="monthly_bill">Monthly Bill</string>
    <string name="mess_off">Mess Off</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="anything_else">Anything else</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="title_activity_login">Login</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_display">Display</string>

    <string name="hint_roll">Roll Number</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_hostel">Hostel</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email ID</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_username">Username</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_mess_menu">Mess Menu</string>
    <string name="title_activity_buy_food_item">Buy Food Item</string>
    <string name="title_activity_mess_off">Mess Off</string>
    <string name="title_activity_bill_history">Bill History</string>
    <string name="title_activity_order_confirmation">Order Confirmation</string>
    <string name="title_activity_mess_subscription">Mess Subscription</string>
    <string name="title_activity_json_parsing_using_volley">JsonParsingUsingVolley</string>

    <string name="btn_json">Json Request</string>
    <string name="btn_string">String Request</string>
    <string name="btn_image">Image Request</string>

    <string name="btn_json_obj_request">Json Object Request</string>
    <string name="btn_json_array_request">Json Array Request</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_mess_subscribe">Mess Subscribe</string>
    <string name="title_activity_purchase">Purchase</string>
    <string name="title_activity_confirm_purchase">Confirm Purchase</string>
    <string name="title_activity_view_personal_details">View Personal Details</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_buy">Buy</string>
    <string name="title_activity_trial_profile">TrialProfile</string>

    <string name="action_toggle">Toggle indicator</string>

    <string name="title_crossfade">Simple Crossfade</string>
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>
    <string name="title_activity_monthly_bill">Monthly Bill</string>

    <string-array name="item_quantity_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_current_orders">CurrentOrders</string>
    <string name="title_activity_custom_adapter_current_orders">CustomAdapterCurrentOrders</string>
    <string name="title_activity_view_bill">ViewBill</string>
    <string name="title_activity_view_mess_off">ViewMessOff</string>

</resources>
